--- a/POC/PromoEngine/Filuet.Hrbl.Ordering.POC.PromoEngine.csproj
+++ b/POC/PromoEngine/Filuet.Hrbl.Ordering.POC.PromoEngine.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Abstractions\Filuet.Hrbl.Ordering.Abstractions.csproj" />
