--- a/POC/PromoEngine/Filuet.Hrbl.Ordering.POC.PromoEngine.csproj
+++ b/POC/PromoEngine/Filuet.Hrbl.Ordering.POC.PromoEngine.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\_PromoViewGrouped.cshtml" />
+    <Content Remove="Views\Home\_ChoiseView.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
   </ItemGroup>
 
